# conan-pcre

./: CMakeLists.txt  conanfile.py
test_package/: conanfile.py  example.cpp
